--- a/SeleniumSmokeTest/test-output/index.html
+++ b/SeleniumSmokeTest/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Nejla\AppData\Local\Temp\testng-eclipse--445667628\testng-customsuite.xml</span>
+                    <span>C:\Users\Nejla\AppData\Local\Temp\testng-eclipse--207176767\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="webbasic.SmokeTest" class="method navigator-link" hash-for-method="assertCreateObject">assertCreateObject</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="webbasic.SmokeTest" class="method navigator-link" hash-for-method="assertExistingObject">assertExistingObject</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="webbasic.test.FillFieldsCreateObject" class="method navigator-link" hash-for-method="testFillAllFields">testFillAllFields</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">webbasic.SmokeTest</span>
+              <span class="class-name">webbasic.test.FillFieldsCreateObject</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="assertCreateObject">
-                  </a> <!-- assertCreateObject -->
-                  <span class="method-name">assertCreateObject</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="assertExistingObject">
-                  </a> <!-- assertExistingObject -->
-                  <span class="method-name">assertExistingObject</span>
+                  <a name="testFillAllFields">
+                  </a> <!-- testFillAllFields -->
+                  <span class="method-name">testFillAllFields</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Nejla\AppData\Local\Temp\testng-eclipse--445667628\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Nejla\AppData\Local\Temp\testng-eclipse--207176767\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;webbasic.SmokeTest&quot;/&gt;
+      &lt;class name=&quot;webbasic.test.FillFieldsCreateObject&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -196,20 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'assertCreateObject')
-data.setCell(0, 2, 'webbasic.SmokeTest')
-data.setCell(0, 3, 29091);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'assertExistingObject')
-data.setCell(1, 2, 'webbasic.SmokeTest')
-data.setCell(1, 3, 13184);
+data.setCell(0, 1, 'testFillAllFields')
+data.setCell(0, 2, 'webbasic.test.FillFieldsCreateObject')
+data.setCell(0, 3, 71134);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 42 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,14 +219,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">webbasic.SmokeTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">assertCreateObject</span>
+              <div class="chronological-class-name">webbasic.test.FillFieldsCreateObject</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">setupEnviromnent</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
+              </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">assertExistingObject</span>
-                <span class="method-start">29098 ms</span>
+                <span class="method-name">testFillAllFields</span>
+                <span class="method-start">8204 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
