--- a/SeleniumSmokeTest/test-output/old/Default suite/classes.html
+++ b/SeleniumSmokeTest/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>webbasic.SmokeTest</td>
+<td>webbasic.test.FillFieldsCreateObject</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>assertCreateObject</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>assertExistingObject</td>
+<td>testFillAllFields</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
