renamed name of project to Navigator

--- a/SeleniumSmokeTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/SeleniumSmokeTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a1e9a9">  <td>18/11/30 00:44:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;FillFieldsCreateObject.setupEnviromnent()[pri:0, instance:webbasic.test.FillFieldsCreateObject@1e66f1f5]">&gt;&gt;setupEnviromnent</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1730704097</td>   <td></td> </tr>
-<tr bgcolor="a1e9a9">  <td>18/11/30 00:44:10</td>   <td>8184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FillFieldsCreateObject.testFillAllFields()[pri:0, instance:webbasic.test.FillFieldsCreateObject@1e66f1f5]">testFillAllFields</td> 
-  <td>main@1730704097</td>   <td></td> </tr>
+<tr bgcolor="a1e9a9">  <td>18/12/05 14:19:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SmokeTest.assertExistingObject()[pri:2, instance:webbasic.test.SmokeTest@4e50c791]">assertExistingObject</td> 
+  <td>main@848363848</td>   <td></td> </tr>
+<tr bgcolor="a1e9a9">  <td>18/12/05 14:19:11</td>   <td>-30864</td> <td>&nbsp;</td><td title="&gt;&gt;SmokeTest.setupEnviromnent()[pri:0, instance:webbasic.test.SmokeTest@4e50c791]">&gt;&gt;setupEnviromnent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@848363848</td>   <td></td> </tr>
+<tr bgcolor="a1e9a9">  <td>18/12/05 14:19:18</td>   <td>-24013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SmokeTest.testCreatingObject()[pri:1, instance:webbasic.test.SmokeTest@4e50c791]">testCreatingObject</td> 
+  <td>main@848363848</td>   <td></td> </tr>
 </table>
