--- a/SeleniumSmokeTest/test-output/old/Default suite/classes.html
+++ b/SeleniumSmokeTest/test-output/old/Default suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>webbasic.test.FillFieldsCreateObject</td>
+<td>webbasic.test.SmokeTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testFillAllFields</td>
+<td>assertExistingObject</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testCreatingObject</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
